# llama-tools

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  smoke.py
data/: README.md  assemble_preferences.py  assemble_sft.py  build_dpo_v2_pairs.py  clean_sft.py  dedupe.py  push_to_hf.py  sample_failures.py  validate_preferences.py
docs/decisions/: ADR-001-base-model-selection.md  ADR-002-training-method-sft-dpo.md  ADR-003-source-datasets.md  ADR-004-preference-synthesis.md  ADR-005-preference-pair-triviality-filtering.md  ADR-006-dpo-v1-negative-result.md  ADR-007-dpo-v2-on-policy-rejecteds.md  ADR-008-dpo-v2-negative-result.md
docs/learning/: glossary.md  week-1-fundamentals.md  week-2-sft-fundamentals.md  week-4-full-sft.md  week-5-6-dpo.md
docs/progress/: week-4-run-log.md  week-6-7-dpo-run-log.md  weeks-1-3.md
docs/report/: README.md  technical-report.md
eval/: README.md  bfcl_leakage_check.py  bfcl_leakage_report.md  bfcl_simple.py  dpo_sweep.py  mmlu_regression.py
model_card/: README.md  sft_model_card.md
quantize/: README.md
train/: README.md  dpo_full.py  dpo_smoke.py  dpo_v2_full.py  merge_and_push.py  merge_dpo_winner.py  sft_full.py  sft_smoke.py
